 - Menu items for specific solar sensor brightness levels
 - Remappable controls for tilt and gyroscope sensors
 - Status messages for actions taken while a game is running (e.g. save/load state)
 - Memory inspector
 - Screensaver can now be suspended while a game is running
 - Load/save the most recent savestate slot
 - Support varible speed (PWM) rumble
Bugfixes:
 - ARM7: Fix SWI and IRQ timings
 - GBA Audio: Force audio FIFOs to 32-bit
 - GBA Memory: Ensure changing the timing of a DMA reschedules it
 - GBA Memory: Improve Thumb open bus behavior
 - VFS: Fix resource leaks if some allocations fail
 - Video: Fix an issue with very long filenames
 - GBA Video: Blended sprites should never have other effects applied
 - GBA: Fix crash if a 512kb flash save is loaded when a game has a 1Mb flash override
 - Qt: Better cleanup when a game crashes
 - Qt: Fix open ROM dialog filtering for archive formats
Misc:
 - Qt: Handle saving input settings better
 - Debugger: Free watchpoints in addition to breakpoints
 - Qt: Move GL frame drawing back onto its own thread
 - GBA: Add status log level
 - GBA Thread: Add functionality for running callbacks on the GBA thread
 - Qt: Fast forward (held) option moved from Other to Emulation menu
 - All: Add --help flag for command line programs
 - Qt: Show version info in window title

0.2.1: (2015-05-13)
Bugfixes:
 - All: Fix sanitize-deb script not cleaning up after itself
 - All: Fix dependencies for libavcodec on Debian-derived platforms
 - ARM7: Handle writeback for PC in addressing modes 2 and 3
 - ARM7: Make illegal instruction decoding consistent between ARM and Thumb
 - ARM7: Fix ARM multiply instructions when PC is a destination register
 - Debugger: Fix use-after-free in breakpoint clearing code
 - Debugger: Fix boundary conditions in tab completion
 - GBA: Fix timers not updating timing when writing to only the reload register
 - GBA: Fix rewind boundary conditions